--- a/src/app/home/control-panel/attributes-cell-renderer/attributes-cell-renderer.component.scss
+++ b/src/app/home/control-panel/attributes-cell-renderer/attributes-cell-renderer.component.scss
@@ -3,3 +3,11 @@
     align-items: center;
     height: 100%;
 }
+
+.truncate {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
