--- a/src/app/utils/ag-grid-shared-floating-filter/ag-grid-shared-floating-filter.component.html
+++ b/src/app/utils/ag-grid-shared-floating-filter/ag-grid-shared-floating-filter.component.html
@@ -2,7 +2,7 @@
 <input type="date" class="form-control" *ngIf="type === 'date'" [(ngModel)]="otherItemInput" (change)="onChange($event.target.value)" />
 <div *ngIf="type === 'list_of_values'" ngbDropdown #listDropdown="ngbDropdown" container="body">
   <button
-    class="btn bg-white border rounded btn-sm w-100 d-flex justify-content-between align-items-center"
+    class="toggle-btn btn btn-sm bg-white rounded w-100 d-flex justify-content-between align-items-center"
     ngbDropdownToggle
     [disabled]="showLoading"
   >
@@ -38,10 +38,10 @@
     </div>
     <div class="dropdown-divider"></div>
     <div class="dropdown-buttons">
-      <button class="btn btn-link" (click)="toggleChecks(checkedCount === listItems.length)">
+      <button class="btn btn-sm btn-link font-sm" (click)="toggleChecks(checkedCount === listItems.length)">
         {{ checkedCount === listItems.length ? 'Clear' : 'Select All' }}
       </button>
-      <button class="btn btn-dark" (click)="listDropdown.close(); onChange()">
+      <button class="btn btn-sm btn-dark font-sm" (click)="listDropdown.close(); onChange()">
         Apply
       </button>
     </div>
