--- a/src/app/home/insight/dataservice-logs/dataservice-logs.component.html
+++ b/src/app/home/insight/dataservice-logs/dataservice-logs.component.html
@@ -1,5 +1,7 @@
 <div class="d-flex flex-column  mt-2">
-    <div class="d-flex  mb-2 justify-content-end">
+    <div class="d-flex  mb-2 justify-content-between">
+        <div class="d-flex align-items-center">
+        </div>
         <div class="text-gray-medium mr-3">
             <label class="m-0">Showing {{loaded || 0}} of {{currentRecordsCount || 0}}</label>
         </div>
