--- a/src/app/home/insight/api-logs/api-logs.component.html
+++ b/src/app/home/insight/api-logs/api-logs.component.html
@@ -1,5 +1,11 @@
 <div class="d-flex flex-column  mt-2">
-    <div class="d-flex  mb-2 justify-content-end">
+    <div class="d-flex mb-2 justify-content-between">
+        <div class="d-flex align-items-center">
+            <button *ngIf="showClearFilter" type="button" class="btn btn-link text-accent py-0" (click)="clearFilters()">
+                <span class="fa fa-times mr-2"></span>
+                <span class="text">Clear Filters</span>
+            </button>
+        </div>
         <div class="text-gray-medium mr-3">
             <label class="m-0">Showing {{loaded || 0 }} of {{currentRecordsCount || 0 }}</label>
         </div>
@@ -55,7 +61,6 @@
                     <div class="d-flex px-4 pt-2">
                         <span class=" ml-1 dot-link"></span>
                         <span class="mx-1 mt-1 far fa-bell"></span>
-                        <!-- <span class="mx-1">Remote IP</span> -->
                         <div>{{selectedLog.logType}}</div>
                     </div>
                 </div>
@@ -85,7 +90,6 @@
             </div>
             <div class="m-2 bg-white req-details">
                 <div class="font-weight-bold  pl-3 pt-3">Response</div>
-
                 <div class="d-flex flex-column p-3 border-bottom">
                     <div class="text-muted">Outcome</div>
                     <div class="d-flex px-4 pt-2">
@@ -118,12 +122,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
-
     </div>
 </div>
 
@@ -149,8 +149,7 @@
             <div class="w-50 d-flex">
                 <button type="button" class="btn btn-link ml-auto" (click)="logModalRef.close(false)"
                     id="sbDeleteModalNo">Close</button>
-            </div>
-           
+            </div>         
         </div>
     </div>
 </ng-template>
