--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -39,8 +39,7 @@
                     <span class="fas fa-angle-down text-accent"></span>
                 </div>
             </div>
-            <div
-                class="profile-icon position-relative d-flex align-items-center justify-content-center rounded-circle bg-light border border-border hover"
+            <div class="profile-icon position-relative d-flex align-items-center justify-content-center rounded-circle bg-light border border-border hover"
                 (click)="showProfileOptions=!showProfileOptions">
                 <span class="far fa-user fa-lg text-secondary"></span>
             </div>
@@ -154,6 +153,17 @@
                         <span class="text" [ngClass]="{'text-accent':hover.agent}">Agents</span>
                     </div>
                     <span *ngIf="agentRoute.isActive" class="fa fa-angle-right mr-3"></span>
+                </div>
+                <div *ngIf="experimentalFeatures" #functionRoute="routerLinkActive"
+                    class="icon-block hover d-flex align-items-center justify-content-between my-2"
+                    routerLinkActive="text-accent bg-white active" [routerLink]="['faas']" id="function"
+                    (mouseover)="hover.function = true" (mouseleave)="hover.function = false">
+                    <div class="d-flex align-items-center">
+                        <odp-function-icon class="mx-2" [color]="hover.function?'0082C9':'222'" size="18"
+                            [active]="functionRoute.isActive"></odp-function-icon>
+                        <span class="text" [ngClass]="{'text-accent':hover.function}">Functions</span>
+                    </div>
+                    <span *ngIf="functionRoute.isActive" class="fa fa-angle-right mr-3"></span>
                 </div>
             </ng-container>
             <ng-container
