--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -1,1 +1,133 @@
-<p>faas-listing works!</p>
+<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+    <div class="align-self-center text-center">
+      <span class="fa fa-spinner fa-pulse fa-3x"></span>
+      <div class="text-secondary mt-2">Processing...</div>
+    </div>
+  </div>
+  <div class="d-flex flex-column w-100 h-100">
+    <odp-breadcrumb></odp-breadcrumb>
+    <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3 mb-3">
+      <div class="font-weight-bold font-lg">List of Function</div>
+      <odp-search-box (enteredText)="search($event)" (reset)="clearSearch()"></odp-search-box>
+      <button type="button" class="add-new btn-min-width btn btn-primary show" id="createDataFormat"
+        *ngIf="hasWritePermission('NS')" (click)="newFaas()">
+        <span class="fa fa-plus mr-2"></span>
+        <span class="text">New Function</span>
+      </button>
+    </div>
+    <div class="d-flex flex-column w-100 px-3">
+      <div class="card-container" (scroll)="loadMore($event)">
+        <ng-container *ngFor="let fass of fassList;let i=index;let first=first">
+          <div
+            class="d-flex align-items-center justify-content-between px-3 border-bottom border-left position-relative border-right nanoservice-list-item"
+            [ngClass]="{'border-top':first}" *ngIf="hasPermissionForFaas(fass._id)">
+            <div class="d-flex align-items-center">
+              <div class="info d-flex flex-column w-100">
+                <div class="font-weight-bold mb-1">{{fass.name}}</div>
+                <a [attr.href]="fass.url" target="_blank" class="font-sm text-accent text-truncate url-holder"
+                  container="body" [ngbTooltip]="fass.url">{{fass.url}}</a>
+              </div>
+            </div>
+            <div class="d-flex align-items-center justify-content-end">
+              <div class="in-out-format d-flex align-items-center mr-3">
+                <div class="in-format d-flex flex-column">
+                  <odp-format-type-badge
+                    [data]="{formatType:fass?.in?.formatType,excelType:fass?.in?.excelType}">
+                  </odp-format-type-badge>
+                </div>
+                <div class="mapper d-flex flex-column mx-4">
+                  <span class="far fa-arrow-alt-circle-right text-secondary"></span>
+                </div>
+                <div class="out-format d-flex flex-column">
+                  <odp-format-type-badge
+                    [data]="{formatType:fass?.out?.formatType,excelType:fass?.out?.excelType}">
+                  </odp-format-type-badge>
+                </div>
+              </div>
+              <div class="microflows d-flex flex-column mr-3">
+                <small for="microflows" class="text-secondary mb-1">Integration Flows</small>
+                <div class="text-dark" [innerHTML]="getFlowInfo(fass.flows)"></div>
+              </div>
+              <div class="options d-flex align-items-center">
+                <button type="button" class="btn btn-link text-secondary" odpClickOutside
+                  (outside)="showMoreOptions[i]=false" (click)="showMoreOptions[i]=!showMoreOptions[i]">
+                  <span class="fa fa-ellipsis-h"></span>
+                </button>
+                <div class="options-menu d-flex align-items-center position-absolute ignore-outside"
+                  [ngClass]="{'show':showMoreOptions[i]}">
+                  <button type="button" class="btn btn-link mr-3" (click)="viewFaas(i)"
+                    [attr.id]="'viewNanoservice-'+i">View</button>
+                  <button type="button" class="btn btn-link mr-3" (click)="editFaas(i)"
+                    [attr.id]="'editNanoservice-'+i" *ngIf="canManageFaas(fass._id)">Edit</button>
+                  <button type="button" class="btn btn-link" (click)="deleteFaas(i)"
+                    [attr.id]="'deleteNanoservice-'+i" *ngIf="canDeleteFaas(fass._id)">Delete</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+        <div class="d-flex flex-column w-100 justify-content-center align-items-center p-3"
+          *ngIf="!fassList.length">
+          <h5 class="my-4 text-secondary">zero. zip. zilch. nada.</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <odp-delete-modal [open]="openDeleteModal" (close)="closeDeleteModal($event)">
+    <odp-function-icon [size]="18" color="DD5151" class="mt-1"></odp-function-icon>
+  </odp-delete-modal>
+  
+  
+  <ng-template #newFaasModal>
+    <div class="new-fass-modal modal-body p-4 d-flex flex-column align-items-center" [formGroup]="form">
+      <div class="d-flex flex-column w-100">
+        <div class="d-flex align-items-center justify-content-between mb-3">
+          <div class="d-flex align-items-center">
+            <span class="icon-wrapper rounded-circle d-flex align-items-center justify-content-center mr-2">
+              <odp-function-icon size="16" color="1CAD49" class="mt-1"></odp-function-icon>
+            </span>
+            <span class="font-weight-bold mt-2">New Function</span>
+          </div>
+          <span class="fa fa-times text-muted hover" (click)="newFaasModalRef.close(false)"></span>
+        </div>
+        <div class="d-flex flex-column w-100">
+          <label for="name" class="font-sm text-secondary">
+            <span class="text">Name</span>
+            <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
+          </label>
+          <div class="name-wrapper position-relative">
+            <input newFaasName type="text" class="form-control" id="name" placeholder="Untitled Function"
+              formControlName="name" (keyup.enter)="newFaasTextarea.focus()" odpAutoFocus
+              [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
+            <ng-container *ngIf="form.get('name').dirty">
+              <span *ngIf="form.get('name').hasError('required')"
+                class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+                ngbTooltip="Name is required"></span>
+              <span *ngIf="form.get('name').hasError('maxlength')"
+                class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+                ngbTooltip="Name should be within 30 characters"></span>
+              <span *ngIf="form.get('name').hasError('pattern')"
+                class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+                ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
+            </ng-container>
+          </div>
+          <label for="description" class="font-sm text-secondary mt-3">Description</label>
+          <div class="name-wrapper position-relative">
+            <textarea #newFaasTextarea class="form-control" id="description" rows="5" placeholder="No description"
+              formControlName="description" (keydown.enter)="$event.preventDefault()" (keyup.enter)="newFaasModalRef.close(true)"></textarea>
+            <ng-container *ngIf="form.get('description').dirty">
+              <span *ngIf="form.get('description').hasError('maxlength')"
+                class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+                ngbTooltip="Description should be within 240 characters"></span>
+            </ng-container>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex align-self-end justify-content-end w-100 mt-3">
+        <button type="button" class="btn btn-min-width btn-create" id="newFaasModalYes" [disabled]="form.invalid"
+          (click)="newFaasModalRef.close(true)">Create</button>
+      </div>
+    </div>
+  </ng-template>
+  
