--- a/src/app/home/insight/group-logs/group-logs.component.html
+++ b/src/app/home/insight/group-logs/group-logs.component.html
@@ -1,5 +1,13 @@
-<div class="text-gray-medium mr-3 mt-2 d-flex justify-content-end">
-    <label class="m-0">Showing {{loaded || 0}} of {{currentRecordsCount || 0}}</label>
+<div class="d-flex my-2 justify-content-between">
+    <div class="d-flex align-items-center">
+        <button *ngIf="showClearFilter" type="button" class="btn btn-link text-accent py-0" (click)="clearFilters()">
+            <span class="fa fa-times mr-2"></span>
+            <span class="text">Clear Filters</span>
+        </button>
+    </div>
+    <div class="text-gray-medium mr-3">
+        <label class="m-0">Showing {{loaded || 0 }} of {{currentRecordsCount || 0 }}</label>
+    </div>
 </div>
 <div class="grid-container mt-2">
     <ag-grid-angular #agGrid class="ag-theme-balham border-0" [gridOptions]="gridOptions" [datasource]="dataSource">
