--- a/src/app/home/insight/dataservice-logs/dataservice-logs.component.html
+++ b/src/app/home/insight/dataservice-logs/dataservice-logs.component.html
@@ -1,6 +1,10 @@
 <div class="d-flex flex-column  mt-2">
     <div class="d-flex  mb-2 justify-content-between">
         <div class="d-flex align-items-center">
+            <button *ngIf="showClearFilter" type="button" class="btn btn-link text-accent py-0" (click)="clearFilters()">
+                <span class="fa fa-times mr-2"></span>
+                <span class="text">Clear Filters</span>
+            </button>
         </div>
         <div class="text-gray-medium mr-3">
             <label class="m-0">Showing {{loaded || 0}} of {{currentRecordsCount || 0}}</label>
