--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -1,1 +1,30 @@
-<p>faas-manage works!</p>
+<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="apiCallsPending">
+    <div class="align-self-center text-center">
+        <span class="fa fa-spinner fa-pulse fa-3x"></span>
+        <div class="text-secondary mt-2">Processing...</div>
+    </div>
+</div>
+<div class="d-flex flex-column w-100 h-100">
+    <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
+    <odp-basic-info hideLogo="true" [(name)]="faasData.name" [(description)]="faasData.description"
+        [edit]="edit">
+        <div class="d-flex justify-content-end align-items-center">
+            <button (click)="cancel()" type="button" class="edit-button btn btn-min-width btn-link"
+                id="cancelNanoServiceBtn">
+                <span class="fa fa-close mr-2"></span>
+                <span class="text">Cancel</span>
+            </button>
+            <button *ngIf="edit.id && !edit.status" (click)="edit.status=true;"
+                type="button" class="edit-button btn btn-min-width btn-primary ml-3" id="editNanoServiceBtn">
+                <span class="odp-edit mr-2"></span>
+                <span class="text">Edit</span>
+            </button>
+            <button *ngIf="edit.status" (click)="save();" type="button"
+                class="edit-button btn btn-min-width btn-dark ml-3" id="saveBtn">
+                <span class="fa fa-save mr-2"></span>
+                <span class="text">Save</span>
+            </button>
+        </div>
+    </odp-basic-info>
+    <ngx-codemirror [(ngModel)]="content" [options]="codeMirrorOptions"></ngx-codemirror>
+</div>
