--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,9 @@
 @import "~ag-grid-community/src/styles/ag-grid.scss";
 @import "~ag-grid-community/src/styles/ag-theme-balham/sass/ag-theme-balham-mixin";
 
+@import '~codemirror/lib/codemirror';
+@import '~codemirror/theme/material';
+
 .add-blur {
   -webkit-filter: blur(6px);
   -moz-filter: blur(6px);
