--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
@@ -92,7 +92,7 @@
                             </small>
                         </div>
                     </div>
-                    <div class="tab-list d-flex align-items-center border-bottom w-100">
+                    <!-- <div class="tab-list d-flex align-items-center border-bottom w-100">
                         <div class="tab px-3" [ngClass]="{'text-accent border-accent':activeTab === 1}"
                             (click)="activeTab=1">
                             Permission
@@ -101,7 +101,7 @@
                             (click)="activeTab=2">
                             Condition
                         </div>
-                    </div>
+                    </div> -->
                     <div class="tab-container d-flex align-items-start border-bottom w-100">
                         <div id="tab-1" *ngIf="activeTab === 1">
                             <div class="d-flex w-100 my-3">
