--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -26,5 +26,6 @@
             </button>
         </div>
     </odp-basic-info>
-    <ngx-codemirror [(ngModel)]="content" [options]="codeMirrorOptions"></ngx-codemirror>
+    <!-- <ngx-codemirror [(ngModel)]="content" [options]="codeMirrorOptions"></ngx-codemirror> -->
+    <odp-code-editor></odp-code-editor>
 </div>
