--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -6,16 +6,15 @@
 </div>
 <div class="d-flex flex-column w-100 h-100">
     <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
-    <odp-basic-info hideLogo="true" [(name)]="faasData.name" [(description)]="faasData.description"
-        [edit]="edit">
+    <odp-basic-info hideLogo="true" [(name)]="faasData.name" [(description)]="faasData.description" [edit]="edit">
         <div class="d-flex justify-content-end align-items-center">
             <button (click)="cancel()" type="button" class="edit-button btn btn-min-width btn-link"
                 id="cancelNanoServiceBtn">
                 <span class="fa fa-close mr-2"></span>
                 <span class="text">Cancel</span>
             </button>
-            <button *ngIf="edit.id && !edit.status" (click)="edit.status=true;"
-                type="button" class="edit-button btn btn-min-width btn-primary ml-3" id="editNanoServiceBtn">
+            <button *ngIf="edit.id && !edit.status" (click)="edit.status=true;" type="button"
+                class="edit-button btn btn-min-width btn-primary ml-3" id="editNanoServiceBtn">
                 <span class="odp-edit mr-2"></span>
                 <span class="text">Edit</span>
             </button>
@@ -26,5 +25,35 @@
             </button>
         </div>
     </odp-basic-info>
-    <odp-code-editor></odp-code-editor>
+    <div class="border-top border-bottom px-3 py-2 d-flex align-items-center justify-content-between">
+        <div class="url-info d-flex align-items-center">
+            <span class="label text-dark font-weight-bold mr-2">API Endpoint&nbsp;:</span>
+            <span class="url text-accent">{{faasData.url || 'N.A.'}}</span>
+        </div>
+        <div class="editor-theme-selection d-flex align-items-center">
+            <span class="label text-dark font-weight-bold mr-2">Theme&nbsp;:</span>
+            <select class="custom-select" name="theme" id="theme" [(ngModel)]="selectedEditorTheme">
+                <option value="vs-dark">Dark</option>
+                <option value="vs-light">Light</option>
+            </select>
+        </div>
+    </div>
+    <div class="monaco-editor no-user-select {{selectedEditorTheme}} p-3">
+        <div class="view-lines monaco-mouse-cursor-text"
+            style="font-family: Menlo, Monaco, 'Courier New', monospace; font-weight: normal; font-size: 12px; font-feature-settings: 'liga' 0, 'calt' 0; line-height: 18px; letter-spacing: 0px; width: 1078px; height: 336px;">
+            <div style="height:18px;" class="view-line"><span><span class="mtk8">function</span><span
+                        class="mtk1">&nbsp;process</span><span class="mtk9">(</span><span
+                        class="mtk1 squiggly-inline-unnecessary">req</span><span class="mtk9">,</span><span
+                        class="mtk1">&nbsp;</span><span class="mtk1 squiggly-inline-unnecessary">res</span><span
+                        class="mtk9">)</span><span class="mtk1">&nbsp;</span><span class="mtk9">{{'{'}}</span></span>
+            </div>
+        </div>
+    </div>
+    <odp-code-editor *ngIf="showCodeEditor" class="code-editor" [theme]="selectedEditorTheme" [(code)]="faasData.code"></odp-code-editor>
+    <div class="monaco-editor no-user-select {{selectedEditorTheme}} p-3">
+        <div class="view-lines monaco-mouse-cursor-text"
+            style="font-family: Menlo, Monaco, 'Courier New', monospace; font-weight: normal; font-size: 12px; font-feature-settings: 'liga' 0, 'calt' 0; line-height: 18px; letter-spacing: 0px; width: 1078px; height: 336px;">
+            <div style="height:18px;" class="view-line"><span><span class="mtk9">{{'}'}}</span></span></div>
+        </div>
+    </div>
 </div>
